# spreadsheet-formulas

./: AGENT.md  Cargo.toml  README.md
docs/: FUTURE-INTEGRATION.md
memory/: JOURNAL.md
src/: ast.rs  builtins.rs  cellref.rs  evaluator.rs  lib.rs  parser.rs  range.rs  tokenizer.rs
